# git-bulk-clean

./: Cargo.toml  README.md  flake.nix  hm-module.nix  result
.github/workflows/: ci.yml
completions/: git-bulk-clean.bash  git-bulk-clean.fish  git-bulk-clean.zsh
man/: git-bulk-clean.1.scd
src/: main.rs
