[package]
name = "git-bulk-clean"
version = "0.1.0"
edition = "2021"
description = "Automatically traverse Git repositories and perform optimization and cleanup"
license = "MIT"
repository = "https://github.com/takeokunn/git-bulk-clean"
authors = ["takeokunn"]
keywords = ["git", "maintenance", "cleanup", "daemon", "ghq"]
categories = ["command-line-utilities", "development-tools"]
