[package]
name = "git-bulk-clean"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
description = "Automatically traverse Git repositories and perform optimization and cleanup"
license = "MIT"
repository = "https://github.com/takeokunn/git-bulk-clean"
authors = ["takeokunn"]
readme = "README.md"
keywords = ["git", "maintenance", "cleanup", "daemon", "ghq"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  ".github/",
  "flake.nix",
  "flake.lock",
  "hm-module.nix",
  "result",
]
